@@ -1,4 +1,10 @@
 2011-01-09 dab <david.astgtciv@gmail.com>
+	* .:Added dab_filltree test
+	  -- This isn't a great test, but it does better than many of the original
+	  Diehard tests, and it acts as an introduction to dab_filltree2, which
+	  does better.
+
+2011-01-09 dab <david.astgtciv@gmail.com>
 	* .:Added dab_monobit2 test
 	* libdieharder/chisq.c:Modified chisq_binomial to use GSL's binomial function
 	  -- Fixed an error with prob.c's binomial function
